--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-HELLO MILK!!
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="UTF-8">
+	<title>MilkSafe</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+	<header>
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="terms.html">Terms and Conditions</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
+			</ul>
+		</nav>
+	</header>
+	<main>
+		<section class="hero">
+			<h1>MilkSafe</h1>
+			<p>The best mobile app to control breastfeeding</p>
+			<a href="#" class="button">Download App</a>
+		</section>
+		<section class="features">
+			<h2>Features</h2>
+			<ul>
+				<li>Easy to use interface</li>
+			</ul>
+		</section>
+		<section class="testimonial">
+			<blockquote>
+				<p>"I've been using MilkSafe for months and it has made me so happy!"</p>
+				<cite>John Smith</cite>
+			</blockquote>
+		</section>
+	</main>
+	<footer>
+		<p>&copy; 2023 MilkSafe. All rights reserved.</p>
+	</footer>
+</body>
+</html>
