--- a/terms.html
+++ b/terms.html
@@ -18,26 +18,13 @@
 	<main>
 		<section class="terms">
 			<h1>Terms and Conditions</h1>
-			<h2>1. Introduction</h2>
-			<p>These terms and conditions govern your use of the MilkSafe mobile application and website. By using MilkSafe, you accept these terms and conditions in full. If you disagree with these terms and conditions or any part of these terms and conditions, you must not use MilkSafe.</p>
-
-			<h2>2. License to use MilkSafe</h2>
-			<p>Unless otherwise stated, we or our licensors own the intellectual property rights in the website and mobile application and the material on the website and mobile application. Subject to the license below, all these intellectual property rights are reserved.</p>
-			<p>You may view, download for caching purposes only, and print pages from the website and mobile application for your own personal use, subject to the restrictions set out below and elsewhere in these terms and conditions.</p>
-			<p>You must not:</p>
-			<ul>
-				<li>Republish material from MilkSafe (including republication on another website or mobile application);</li>
-				<li>Sell, rent or sub-license material from MilkSafe;</li>
-				<li>Show any material from MilkSafe in public;</li>
-				<li>Reproduce, duplicate, copy or otherwise exploit material on MilkSafe for a commercial purpose;</li>
-				<li>Redistribute material from MilkSafe, except for content specifically and expressly made available for redistribution.</li>
-			</ul>
-
-			<h2>3. Limitations of liability</h2>
-			<p>We will not be liable to you in relation to the contents of, or use of, or otherwise in connection with, this website and mobile application for any indirect, special or consequential loss; or for any business losses, loss of revenue, income, profits or anticipated savings, loss of contracts or business relationships, loss of reputation or goodwill, or loss or corruption of information or data.</p>
-
-			<h2>4. Indemnity</h2>
-			<p>You agree to indemnify us, and our directors, officers, employees and agents, from and against any claims, actions, suits or proceedings, as well as any and all losses, liabilities, damages, costs and expenses (including reasonable legal fees) arising out of or in any way connected with your use of MilkSafe.</p>
+			<p>Welcome to our mobile application (the "MilkSafe") that calculates blood alcohol content (BAC) levels for breastfeeding mothers. Please read these Terms and Conditions carefully before using our App.<br><br>By accessing or using our App, you agree to be bound by these Terms and Conditions, as well as our Privacy Policy. If you do not agree with any of these terms, please do not use the App.</p>
+			<h2>Use of the App:</h2>
+			<p>Our App is intended for informational purposes only and should not be used as a substitute for professional medical advice, diagnosis or treatment. Always consult your healthcare provider before consuming alcohol while breastfeeding.<br><br>The App is provided on an "as is" and "as available" basis, without any representations, warranties or conditions of any kind, whether express or implied. We do not guarantee the accuracy or reliability of any information provided by the App, and we are not responsible for any errors, omissions, or inaccuracies in such information.</p>
+			<h2>Limitation of Liability:</h2>
+			<p>We are not liable for any damages or losses whatsoever, including indirect, consequential or special damages, arising from your use of the App or reliance on any information provided by the App.</p>
+			<h2>Disclaimer:</h2>
+			<p>The calculations and information provided by our App are for informational purposes only and should not be relied upon as a substitute for professional medical advice or diagnosis. We make no representation or warranty of any kind, express or implied, regarding the accuracy or completeness of the information provided by the App.<br>By using the App, you acknowledge and agree that our calculations are based on average values and should not be considered as medical advice. We are not responsible for any decisions or actions you take based on the information provided by the App, and you assume all risks associated with such decisions or actions.<br>Our App is not a substitute for professional medical advice, diagnosis or treatment. Always consult your healthcare provider before consuming alcohol while breastfeeding.<br>We shall not be liable to you or any third party for any damages arising from your use of the App, including without limitation direct, indirect, incidental, punitive, and consequential damages, even if we have been advised of the possibility of such damages.</p>
 		</section>
 	</main>
 	<footer>
