--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 	<main>
 		<section class="contact">
 			<h1>Contact Us</h1>
-			<p>If you have any questions or concerns, please email us at <a href="mailto:milksafeapp@gmail.com">info@milk-safe.com</a>.</p>
+			<p>If you have any questions or concerns, please email us at <a href="mailto:milksafeapp@gmail.com">milksafeapp@gmail.com</a>.</p>
 		</section>
 	</main>
 	<footer>
