privacy email updated

--- a/privacy.html
+++ b/privacy.html
@@ -40,7 +40,7 @@
 	<h2>5. Data Security</h2>
 	<p>We take appropriate measures to protect the data of our users from unauthorized access, alteration, disclosure, or destruction.</p>
 	<h2>6. Contacts</h2>
-	<p>If you have any questions or comments about our Privacy Policy, please contact us at <a href="mailto:[email protected]">[email protected]</a>.</p>
+	<p>If you have any questions or comments about our Privacy Policy, please contact us at <a href="mailto:milksafeapp@gmail.com">milksafeapp@gmail.com</a>.</p>
 		</section>
 	</main>
 	<footer>
