--- a/privacy.html
+++ b/privacy.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Terms and Conditions | MilkSafe</title>
+	<title>Privacy policy | MilkSafe</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -10,7 +10,7 @@
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li class="active"><a href="terms.html">Terms and Conditions</a></li>
+				<li><a href="terms.html">Terms and Conditions</a></li>
 				<li><a href="contact.html">Contact Us</a></li>
 			</ul>
 		</nav>
